fixed search box so it aligns with photo gallery

--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,8 @@ body {
 
 .gallery {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    row-gap: 65px;
-    column-gap: 65px;
-    padding-bottom: 100px;
-
+    grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
+    row-gap: 40px;
 }
 
 .center {
@@ -31,23 +28,26 @@ img {
     border: 5px dotted grey;
 }
 
-@media only screen and (max-width: 1400px) {
-    .gallery {
-        grid-template-columns: 1fr 1fr 1fr;
+@media only screen and (max-width: 1700px) {
+    #search {
+        width: 60%;
+    }
   }
 
-}
-
-@media only screen and (max-width: 1050px) {
-    .gallery {
-        grid-template-columns: 1fr 1fr;
+@media only screen and (max-width: 1150px) {
+    #search {
+        width: 50%;
+    }
   }
 
-}
+@media only screen and (max-width: 900px) {
+    #search {
+        width: 20%;
+        margin-left: 25px;
+    }
 
-@media only screen and (max-width: 720px) {
-    .gallery {
-        grid-template-columns: 1fr;
+    body {
+        margin-left: 30%;
+        margin-right: 30%;
+    }
   }
-
-}
